improve genre reduction

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -2115,6 +2115,470 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Adventure',\n",
+       " 'Adventure fiction',\n",
+       " 'Adventure novel',\n",
+       " 'Alternate history',\n",
+       " 'Apocalyptic and post-apocalyptic fiction',\n",
+       " 'Apocalyptic fiction',\n",
+       " 'Autobiographical novel',\n",
+       " 'Autobiography',\n",
+       " 'Bildungsroman',\n",
+       " 'Biographical novel',\n",
+       " 'Biography',\n",
+       " 'Biography in literature',\n",
+       " 'Black comedy',\n",
+       " 'Bush poetry',\n",
+       " 'Business',\n",
+       " 'Canadian literature',\n",
+       " 'Captivity narrative',\n",
+       " \"Children's Literature\",\n",
+       " \"Children's book\",\n",
+       " \"Children's books\",\n",
+       " \"Children's fiction\",\n",
+       " \"Children's literature\",\n",
+       " \"Children's novel\",\n",
+       " 'Chivalric romance',\n",
+       " 'Christian Apologetics',\n",
+       " 'Christian fiction',\n",
+       " 'Christian literature',\n",
+       " 'Christian mysticism',\n",
+       " 'Christian mythology',\n",
+       " 'Christian novel',\n",
+       " 'Comedy',\n",
+       " 'Comedy novel',\n",
+       " 'Comic novel',\n",
+       " 'Contemporary romance',\n",
+       " 'Cookbook',\n",
+       " 'Crime fiction',\n",
+       " 'Crime novel',\n",
+       " 'Cryptozoology',\n",
+       " 'Cultural criticism',\n",
+       " 'Dark fantasy',\n",
+       " 'Decadent movement',\n",
+       " 'Detective fiction',\n",
+       " 'Detective novel',\n",
+       " 'Detective stories',\n",
+       " 'Diary and Novel',\n",
+       " 'Drama',\n",
+       " 'Dystopian',\n",
+       " 'Dystopian novel',\n",
+       " 'Economics',\n",
+       " 'Encyclopedia',\n",
+       " 'Epistolary novel',\n",
+       " 'Essay',\n",
+       " 'Fairy tale',\n",
+       " 'Fairytale fantasy',\n",
+       " 'Family saga',\n",
+       " 'Fantasy',\n",
+       " 'Fantasy fiction',\n",
+       " 'Fantasy literature',\n",
+       " 'Fantasy novel',\n",
+       " 'Fantasy/Ethnic novel',\n",
+       " 'Feminist science fiction',\n",
+       " 'Fiction',\n",
+       " 'Folklore',\n",
+       " 'Frame story',\n",
+       " 'Gaucho literature',\n",
+       " 'Gothic fiction',\n",
+       " 'Gothic novel',\n",
+       " 'Hindi',\n",
+       " 'Historical',\n",
+       " 'Historical Fiction',\n",
+       " 'Historical Novel',\n",
+       " 'Historical fantasy',\n",
+       " 'Historical fiction',\n",
+       " 'Historical mystery',\n",
+       " 'Historical novel',\n",
+       " 'Historical novels',\n",
+       " 'History',\n",
+       " 'History of Ideas',\n",
+       " 'Horror fiction',\n",
+       " 'Horror novel',\n",
+       " 'Humor',\n",
+       " 'Interior design',\n",
+       " 'Juvenile literature',\n",
+       " 'Künstlerroman',\n",
+       " 'Legal thriller',\n",
+       " 'Literary realism',\n",
+       " 'Lost World (genre)',\n",
+       " 'Memoir',\n",
+       " 'Military history',\n",
+       " 'Military science fiction',\n",
+       " 'Monograph',\n",
+       " 'Mystery (fiction)',\n",
+       " 'Mystery fiction',\n",
+       " 'Mystery novel',\n",
+       " 'Nature writing',\n",
+       " 'Non-Fiction',\n",
+       " 'Non-Profit',\n",
+       " 'Non-fiction',\n",
+       " 'Nonfiction',\n",
+       " 'Nonsense poetry',\n",
+       " 'Novel',\n",
+       " 'Novel of manners',\n",
+       " 'Novella',\n",
+       " 'Philosophical fiction',\n",
+       " 'Philosophical literature',\n",
+       " 'Philosophical novel',\n",
+       " 'Philosophy',\n",
+       " 'Photography',\n",
+       " 'Picture book',\n",
+       " 'Planetary romance',\n",
+       " 'Poem',\n",
+       " 'Poetry',\n",
+       " 'Political',\n",
+       " 'Political journalism',\n",
+       " 'Political novel',\n",
+       " 'Political philosophy',\n",
+       " 'Political thriller',\n",
+       " 'Prose poetry',\n",
+       " 'Psychological Thriller',\n",
+       " 'Psychological novel',\n",
+       " 'Reference work',\n",
+       " 'Roman à clef',\n",
+       " 'Romance novel',\n",
+       " 'Romantic novel',\n",
+       " 'Romanticism',\n",
+       " 'Ruritanian romance',\n",
+       " 'Satire',\n",
+       " 'Satirical',\n",
+       " 'Science',\n",
+       " 'Science Fantasy',\n",
+       " 'Science fantasy',\n",
+       " 'Science fiction',\n",
+       " 'Science fiction fandom',\n",
+       " 'Self-help',\n",
+       " 'Sensation novel',\n",
+       " 'Short stories',\n",
+       " 'Short story',\n",
+       " 'Short story cycle',\n",
+       " 'Sketch story',\n",
+       " 'Slave narrative',\n",
+       " 'Social commentary',\n",
+       " 'Spiritual autobiography',\n",
+       " 'Spy novel',\n",
+       " 'Sword and sorcery',\n",
+       " 'Syair',\n",
+       " 'Temperance movement',\n",
+       " 'Textbook',\n",
+       " 'Theodicy',\n",
+       " 'Thriller (genre)',\n",
+       " 'Thriller fiction',\n",
+       " 'Thriller novel',\n",
+       " 'Tragedy',\n",
+       " 'Tragicomedy',\n",
+       " 'Travel literature',\n",
+       " 'Travel writing',\n",
+       " 'Utopian and dystopian fiction',\n",
+       " 'Utopian fiction',\n",
+       " 'Utopian novel',\n",
+       " 'Verse novel',\n",
+       " 'Victorian literature',\n",
+       " 'War',\n",
+       " 'War novel',\n",
+       " 'Western (genre)',\n",
+       " 'Western fiction',\n",
+       " 'Western novel',\n",
+       " 'World War II',\n",
+       " 'Wuxia',\n",
+       " 'Young adult fiction',\n",
+       " 'Young adult novel',\n",
+       " 'Young adult novels',\n",
+       " 'Young-Adult Fiction',\n",
+       " 'Young-adult fiction',\n",
+       " 'unknown'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(dataset.genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adventur',\n",
+       " 'altern histori',\n",
+       " 'apocalypt',\n",
+       " 'apocalyptandpostapocalypt',\n",
+       " 'autobiograph',\n",
+       " 'autobiographi',\n",
+       " 'bildungsroman',\n",
+       " 'biograph',\n",
+       " 'biographi',\n",
+       " 'biographiin',\n",
+       " 'black comedi',\n",
+       " 'bush poetri',\n",
+       " 'busi',\n",
+       " 'canadian',\n",
+       " 'captiv narr',\n",
+       " 'children',\n",
+       " 'chivalr romanc',\n",
+       " 'christian',\n",
+       " 'comedi',\n",
+       " 'comic',\n",
+       " 'contemporari romanc',\n",
+       " 'cookbook',\n",
+       " 'crime',\n",
+       " 'cryptozoolog',\n",
+       " 'cultur critic',\n",
+       " 'dark fantasi',\n",
+       " 'decad movement',\n",
+       " 'detect',\n",
+       " 'detect stori',\n",
+       " 'diariand',\n",
+       " 'drama',\n",
+       " 'dystopian',\n",
+       " 'econom',\n",
+       " 'encyclopedia',\n",
+       " 'epistolari',\n",
+       " 'essay',\n",
+       " 'fairi tale',\n",
+       " 'fairytal fantasi',\n",
+       " 'famili saga',\n",
+       " 'fantasi',\n",
+       " 'fantasyethn',\n",
+       " 'feministscienc',\n",
+       " 'fiction',\n",
+       " 'folklor',\n",
+       " 'frame stori',\n",
+       " 'gaucho',\n",
+       " 'gothic',\n",
+       " 'hindi',\n",
+       " 'histor',\n",
+       " 'histori of idea',\n",
+       " 'horror',\n",
+       " 'humor',\n",
+       " 'interior design',\n",
+       " 'juvenil',\n",
+       " 'knstlerroman',\n",
+       " 'legal thriller',\n",
+       " 'literari realism',\n",
+       " 'lost world genr',\n",
+       " 'memoir',\n",
+       " 'militari histori',\n",
+       " 'militariscienc',\n",
+       " 'monograph',\n",
+       " 'mysteri',\n",
+       " 'natur write',\n",
+       " 'nonfict',\n",
+       " 'nonprofit',\n",
+       " 'nonsens poetri',\n",
+       " 'novel',\n",
+       " 'novel of manner',\n",
+       " 'novella',\n",
+       " 'philosophi',\n",
+       " 'photographi',\n",
+       " 'pictur book',\n",
+       " 'planetari romanc',\n",
+       " 'poem',\n",
+       " 'poetri',\n",
+       " 'polit',\n",
+       " 'prose poetri',\n",
+       " 'psycholog',\n",
+       " 'psycholog thriller',\n",
+       " 'refer work',\n",
+       " 'roman clef',\n",
+       " 'romanc',\n",
+       " 'romant',\n",
+       " 'romantic',\n",
+       " 'ruritanian romanc',\n",
+       " 'satir',\n",
+       " 'science',\n",
+       " 'science fiction',\n",
+       " 'selfhelp',\n",
+       " 'sensat',\n",
+       " 'short stori',\n",
+       " 'short stori cycl',\n",
+       " 'sketch stori',\n",
+       " 'slave narr',\n",
+       " 'social commentari',\n",
+       " 'spi',\n",
+       " 'spiritu autobiographi',\n",
+       " 'sword and sorceri',\n",
+       " 'syair',\n",
+       " 'temper movement',\n",
+       " 'textbook',\n",
+       " 'theodici',\n",
+       " 'thriller',\n",
+       " 'tragedi',\n",
+       " 'tragicomedi',\n",
+       " 'travel',\n",
+       " 'travel write',\n",
+       " 'unknown',\n",
+       " 'utopian',\n",
+       " 'utopiananddystopian',\n",
+       " 'vers',\n",
+       " 'victorian',\n",
+       " 'war',\n",
+       " 'western',\n",
+       " 'world war ii',\n",
+       " 'wuxia',\n",
+       " 'young adult'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.reduce_genres(dataset.genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re, nltk\n",
+    "\n",
+    "def replace_special_chars2(string, char='_'):\n",
+    "    return re.sub('[^A-Z a-z0-9]+', char, string)\n",
+    "\n",
+    "\n",
+    "def concat(ls):\n",
+    "    if ls == []:\n",
+    "        return []\n",
+    "    result = ls[0]\n",
+    "    for char in ls[1:]:\n",
+    "        result += char\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def intersperse(ls, a=' '):\n",
+    "    result = ls[0]\n",
+    "    for char in ls[1:]:\n",
+    "        result += a + char\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def normalize_string(string):\n",
+    "    s = replace_special_chars2(string, char='').lower()\n",
+    "    porter = nltk.PorterStemmer()\n",
+    "    s_ = [porter.stem(t) for t in nltk.word_tokenize(s)]\n",
+    "    return intersperse(s_, ' ')\n",
+    "\n",
+    "\n",
+    "def rmv_words(text='', words=[]):\n",
+    "    # remove specific words in a string\n",
+    "    tokens = text.split(' ')\n",
+    "    if len(tokens) < 2:\n",
+    "        return concat(tokens)\n",
+    "    # check for max 2 words\n",
+    "    if tokens[-1] in words:\n",
+    "        tokens = tokens[:-1]\n",
+    "        return rmv_words(concat(tokens))\n",
+    "    return intersperse(tokens, ' ')\n",
+    "\n",
+    "\n",
+    "def stem_conditionally(text='', stem_list=['']):\n",
+    "    tokens = text.split(' ')\n",
+    "    print('t ',tokens, intersperse(tokens, ' '), tokens[0])\n",
+    "    if len(tokens) > 1:\n",
+    "        if tokens[0] in stem_list:\n",
+    "            tokens = [tokens[0]]\n",
+    "            print('+', tokens, intersperse(tokens, ' '))\n",
+    "    return intersperse(tokens, ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_genre(g='horror'):\n",
+    "    # remove keywords such as 'fiction'\n",
+    "    unused_words = ['fiction', 'novel', 'literature', 'literatur']\n",
+    "    known_genres = [\n",
+    "        'children', 'christian', 'fantasi', 'histor', 'horror', 'philosoph',\n",
+    "        'polit', 'western', 'thriller', 'scienc', 'detective', 'apocalypt'\n",
+    "    ]\n",
+    "    # synonyms and typos (first member is correct)\n",
+    "    synonyms = [('satire', 'satirical'), ('histor', 'histori'),\n",
+    "                ('young adult', 'youngadult'), ('fairy tale', 'fairytale'),\n",
+    "                ('science fiction', 'scienc', 'science'), ('apocalypt',\n",
+    "                                                           'postapocalypt')]\n",
+    "\n",
+    "    # do not confuse 'science' and 'science fiction'\n",
+    "    g = g.lower()\n",
+    "    if g == 'science':\n",
+    "        return g\n",
+    "\n",
+    "    g = normalize_string(g)\n",
+    "    g = rmv_words(g, unused_words)\n",
+    "    # remove sub-genres such as 'horror fiction'\n",
+    "    print('b',g)\n",
+    "    g = stem_conditionally(g, known_genres)\n",
+    "    # remove unclassfiable words such as 'fiction\n",
+    "    print('_',g)\n",
+    "    g = rmv_words(g, unused_words)\n",
+    "    print('a',g)\n",
+    "    # remove synonyms and typos\n",
+    "    for tuple_ in synonyms:\n",
+    "        if g in tuple_:\n",
+    "            g = tuple_[0]\n",
+    "    return g\n",
+    "\n",
+    "\n",
+    "def reduce_genres(genres=['']):\n",
+    "    if type(genres) is str:\n",
+    "        return normalize_genre(genres)\n",
+    "    # g_ = set([utils.normalize_string(g) for g in genres])\n",
+    "    return set([normalize_genre(g) for g in genres])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b children book\n",
+      "t  ['children', 'book'] children book children\n",
+      "+ ['children'] children\n",
+      "_ children\n",
+      "a children\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'children'}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.reduce_genres([\"Children's books\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2125,9 +2589,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# genre = data.reduce_genres(genre)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
