update golden_standard with 'O'

--- a/src/lab/lab2.ipynb
+++ b/src/lab/lab2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        " 'my 3-year-old': 'PERSON'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_text = nltk.word_tokenize(text)\n",
+    "default_standard = {k:'O' for k in nltk.word_tokenize(text)}\n",
+    "for k,label in gold_standard.items():\n",
+    "    for sub_key in k.split():\n",
+    "        default_standard[sub_key] = label\n",
+    "gold_standard = default_standard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gold_standard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -192,37 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test-set:  PERSON Amanda\n",
-      "test-set:  PERSON Chantal\n",
-      "test-set:  PERSON Bacon\n",
-      "test-set:  LOCATION Los\n",
-      "test-set:  LOCATION Angeles\n",
-      "test-set:  LOCATION Gwyneth\n",
-      "test-set:  LOCATION Paltrow\n",
-      "test-set:  PERSON Shailene\n",
-      "test-set:  PERSON Woodley\n",
-      "test-set:  PERSON Bacon\n",
-      "test-set:  ORGANIZATION Kundalini\n",
-      "test-set:  ORGANIZATION meditation\n",
-      "test-set:  LOCATION Moon\n",
-      "test-set:  LOCATION Juice\n",
-      "test-set:  LOCATION Moon\n",
-      "test-set:  LOCATION Juice\n",
-      "test-set:  ORGANIZATION stevia\n",
-      "test-set:  ORGANIZATION Shima\n",
-      "test-set:  ORGANIZATION on\n",
-      "test-set:  ORGANIZATION Abbot\n",
-      "test-set:  ORGANIZATION Kinney\n",
-      "test-set:  ORGANIZATION Rama\n",
-      "test-set:  ORGANIZATION Yoga\n",
-      "test-set:  LOCATION Venice\n",
+      "---  O\n",
+      "precision: 0.967948717948718\n",
+      "recall: 0.9977973568281938\n",
+      "F-measure: 0.9826464208242949\n",
+      "---  TIME\n",
+      "precision: None\n",
+      "recall: 0.0\n",
+      "F-measure: None\n",
       "---  PERSON\n",
       "precision: 1.0\n",
       "recall: 0.45454545454545453\n",
@@ -235,10 +242,6 @@
       "precision: 0.42857142857142855\n",
       "recall: 0.6\n",
       "F-measure: 0.5\n",
-      "---  TIME\n",
-      "precision: None\n",
-      "recall: 0.0\n",
-      "F-measure: None\n",
       "---  QUANTITY\n",
       "precision: None\n",
       "recall: 0.0\n",
@@ -254,9 +257,8 @@
     "        refsets[label].add(e)\n",
     "\n",
     "for i, (test_instance, label) in enumerate(result):\n",
-    "    if not label == 'O':\n",
-    "        print('test-set: ', label, test_instance)\n",
-    "        testsets[label].add(test_instance)\n",
+    "    # print('test-set: ', label, test_instance)\n",
+    "    testsets[label].add(test_instance)\n",
     "\n",
     "for label in refsets.keys():\n",
     "    print('--- ', label)\n",
@@ -267,24 +269,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('precision:', precision(refsets[label], testsets[label]))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "label = 'O'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testsets[label]"
+   ]
   },
   {
    "cell_type": "code",
