--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "import data, config, tfidf, models\n",
+    "import data, config, tfidf, models, sentimentanalysis\n",
     "from utils import io"
    ]
   },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.models.Sequential at 0x119d54048>"
+       "<keras.models.Sequential at 0x1196eb160>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,24 +132,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = config.dataset_dir + 'test/12.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens, lines = io.read_book3(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1005.txt']"
+       "4306"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n = 1\n",
-    "test = dataset.book_sentiment_words_list[:1]\n",
-    "test"
+    "len(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Project Gutenberg EBook of Through the Looking-Glass, by\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the', 'project', 'gutenberg', 'ebook']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens[:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = data.tokenlist_to_vector(tokens, dataset.sentiment_dataset)\n",
+    "v2 = np.array(sentimentanalysis.per_book(lines))\n",
+    "x = np.append(v1,v2)\n",
+    "x_test = np.stack([x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 113)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = model.predict(x_test)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results, best = data.decode_y(dataset, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted genre: \"young adult\" with a score of 13.84%\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = round(results[best[0]] * 100,2)\n",
+    "print('Predicted genre: \"%s\" with a score of %s%s' % (best[0], v, '%') )"
    ]
   },
   {
@@ -158,55 +284,194 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = config.dataset_dir + 'test/10.txt'\n",
-    "with open(filename, 'r', errors='replace') as book:\n",
-    "    text = book.read()\n",
-    "    # text = open(filename, 'r', errors='replace').read()\n",
-    "tokenized = tfidf.tokenize(text)\n",
-    "# tokenized, lines = io.read_book3(filename)\n",
-    "# tokenized"
+    "results2, best = data.decode_y(dataset, y_test, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: young adult\n",
+      "2: adventur\n",
+      "3: tragedi\n",
+      "4: sword and sorceri\n",
+      "5: histor\n",
+      "6: satir\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,v in enumerate(best):\n",
+    "    print('%i: %s' % (i+1,v) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['young adult', 'adventur', 'tragedi', 'sword and sorceri', 'histor', 'satir']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# x_test = models.to_vector([tokenized],dataset)\n",
-    "# x_test"
+    "dict_ = results\n",
+    "ls = list(dict_.items())\n",
+    "ls.sort(key=lambda x: x[1], reverse=True)\n",
+    "selected = ls[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('young adult', 0.13841757),\n",
+       " ('adventur', 0.08993133),\n",
+       " ('tragedi', 0.08365248),\n",
+       " ('sword and sorceri', 0.055733968),\n",
+       " ('histor', 0.050287463),\n",
+       " ('satir', 0.045559965),\n",
+       " ('captiv narr', 0.03283493),\n",
+       " ('bush poetri', 0.031957846),\n",
+       " ('natur write', 0.031080721),\n",
+       " ('textbook', 0.02514451),\n",
+       " ('epistolari', 0.024493687),\n",
+       " ('thriller', 0.024071176),\n",
+       " ('bildungsroman', 0.023193855),\n",
+       " ('poetri magazin', 0.019278247),\n",
+       " ('drama', 0.017490538),\n",
+       " ('social commentari', 0.016139176),\n",
+       " ('feministscienc', 0.015549175),\n",
+       " ('spiritu autobiographi', 0.014971533),\n",
+       " ('dystopia', 0.01481873),\n",
+       " ('militari histori', 0.012560144),\n",
+       " ('fantasyethn', 0.011540026),\n",
+       " ('militariscienc', 0.010606985),\n",
+       " ('cryptozoolog', 0.010333052),\n",
+       " ('tragicomedi', 0.010269784),\n",
+       " ('poem', 0.00920145),\n",
+       " ('polit', 0.009146688),\n",
+       " ('utopiananddystopian', 0.008720625),\n",
+       " ('hindi', 0.008609294),\n",
+       " ('famili saga', 0.008470377),\n",
+       " ('war', 0.008040619),\n",
+       " ('busi', 0.0074672992),\n",
+       " ('literari', 0.006315459),\n",
+       " ('planetari romanc', 0.006274579),\n",
+       " ('biograph', 0.0059440127),\n",
+       " ('biographiin', 0.005714967),\n",
+       " ('dystopian', 0.0056408886),\n",
+       " ('refer work', 0.005544754),\n",
+       " ('selfhelp', 0.005339398),\n",
+       " ('decad movement', 0.005218824),\n",
+       " ('sensat', 0.0048535005),\n",
+       " ('novella', 0.00418562),\n",
+       " ('essay', 0.004038787),\n",
+       " ('philosophi', 0.003947401),\n",
+       " ('cookbook', 0.0037566465),\n",
+       " ('nonfict', 0.003726796),\n",
+       " ('science', 0.0033090585),\n",
+       " ('literari realism', 0.0032890758),\n",
+       " ('sketch stori', 0.0030843213),\n",
+       " ('fiction', 0.0029788336),\n",
+       " ('knstlerroman', 0.002928005),\n",
+       " ('slave narr', 0.0029111379),\n",
+       " ('children', 0.002844592),\n",
+       " ('mysteri', 0.0026122564),\n",
+       " ('canadian', 0.002563993),\n",
+       " ('horror', 0.0024950984),\n",
+       " ('black comedi', 0.0021688708),\n",
+       " ('contemporari romanc', 0.0021566357),\n",
+       " ('poetri', 0.0020562597),\n",
+       " ('comic', 0.0020216012),\n",
+       " ('fairi tale', 0.0018773808),\n",
+       " ('detect stori', 0.0017617171),\n",
+       " ('world war ii', 0.0016278031),\n",
+       " ('psycholog', 0.0015650943),\n",
+       " ('theodici', 0.0013871939),\n",
+       " ('memoir', 0.0013632698),\n",
+       " ('novel of manner', 0.0013358961),\n",
+       " ('detect', 0.0012884979),\n",
+       " ('interior design', 0.0012186666),\n",
+       " ('apocalyptandpostapocalypt', 0.0011834266),\n",
+       " ('chivalr romanc', 0.00092777424),\n",
+       " ('altern histori', 0.0009108708),\n",
+       " ('nonprofit', 0.0008817894),\n",
+       " ('humor', 0.00062976475),\n",
+       " ('lost world genr', 0.00062107376),\n",
+       " ('comedi', 0.0005807842),\n",
+       " ('folklor', 0.0005304812),\n",
+       " ('prose poetri', 0.0004735587),\n",
+       " ('biographi', 0.00046140834),\n",
+       " ('unknown', 0.00045813233),\n",
+       " ('frame stori', 0.00044299554),\n",
+       " ('wuxia', 0.0003057035),\n",
+       " ('crime', 0.0002424217),\n",
+       " ('travel write', 0.00017168792),\n",
+       " ('roman clef', 0.0001213096),\n",
+       " ('fantasi', 5.3058895e-05),\n",
+       " ('pictur book', 6.08836e-06),\n",
+       " ('autobiographi', 3.8681337e-06),\n",
+       " ('diariand', 3.8009146e-06),\n",
+       " ('gaucho', 3.7735554e-06),\n",
+       " ('short stori', 3.464051e-06),\n",
+       " ('temper movement', 3.4343445e-06),\n",
+       " ('western', 3.410333e-06),\n",
+       " ('autobiograph', 3.1805475e-06),\n",
+       " ('christian', 3.1337502e-06),\n",
+       " ('vers', 3.0340896e-06),\n",
+       " ('nonsens poetri', 3.0259264e-06),\n",
+       " ('encyclopedia', 2.96426e-06),\n",
+       " ('romantic', 2.9306866e-06),\n",
+       " ('novel', 2.8778993e-06),\n",
+       " ('spi', 2.818731e-06),\n",
+       " ('victorian', 2.7887972e-06),\n",
+       " ('ruritanian romanc', 2.6833363e-06),\n",
+       " ('science fiction', 2.623718e-06),\n",
+       " ('monograph', 2.6171706e-06),\n",
+       " ('photographi', 2.5719182e-06),\n",
+       " ('gothic', 2.5474196e-06),\n",
+       " ('histori of idea', 2.5206507e-06),\n",
+       " ('syair', 2.481496e-06),\n",
+       " ('romance', 2.4492315e-06),\n",
+       " ('econom', 2.3498296e-06),\n",
+       " ('utopian', 2.2666943e-06),\n",
+       " ('travel', 1.9388842e-06),\n",
+       " ('juvenil', 1.9222532e-06)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(filename, 'r', errors='replace') as book:\n",
-    "    #     text = book.read()\n",
-    "    lines = book.readlines()\n",
-    "    print(lines)\n",
-    "tokenized = tfidf.tokenize(text)"
+    "ls"
    ]
   },
   {
@@ -217,7 +482,11 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[('young adult', 0.13841757),\n",
+       " ('adventur', 0.08993133),\n",
+       " ('tragedi', 0.08365248),\n",
+       " ('sword and sorceri', 0.055733968),\n",
+       " ('histor', 0.050287463)]"
       ]
      },
      "execution_count": 21,
@@ -226,7 +495,27 @@
     }
    ],
    "source": [
-    "lines"
+    "selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results == results2"
    ]
   },
   {
@@ -234,24 +523,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "        if filename.endswith(\".txt\"):\n",
-    "            text = open(os.path.join(directory, filename), 'r', errors='replace')\n",
-    "            # for every line in the text\n",
-    "            for line in text.readlines():\n",
-    "                scores = return_sentiment_scores(line, analyser)\n",
-    "                # save sentiment scores\n",
-    "                sub_neg_list.append(scores['neg'])\n",
-    "                sub_neu_list.append(scores['neu'])\n",
-    "                sub_pos_list.append(scores['pos'])\n",
-    "                sub_comp_list.append(scores['compound'])\n",
-    "\n",
-    "            # then save average sentiment scores for each book\n",
-    "            neg_list.append((sum(sub_neg_list) / float(len(sub_neg_list))))\n",
-    "            pos_list.append((sum(sub_pos_list) / float(len(sub_pos_list))))\n",
-    "            neu_list.append((sum(sub_neu_list) / float(len(sub_neu_list))))\n",
-    "            comp_list.append((sum(sub_comp_list) / float(len(sub_comp_list))))\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
