--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas, os, numpy as np, collections\n",
+    "import config\n",
+    "np.random.seed(config.seed)\n",
     "import os, sklearn, pandas, numpy as np\n",
     "from sklearn import svm\n",
     "import skimage\n",
@@ -16,6 +28,13 @@
     "from keras.callbacks import TensorBoard\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2588,13 +2607,7 @@
       "500/500 [==============================] - 1s 2ms/step - loss: 0.1224 - acc: 0.9900 - val_loss: 4.5072 - val_acc: 0.2700\n",
       "Epoch 182/200\n",
       "500/500 [==============================] - 1s 2ms/step - loss: 0.1249 - acc: 0.9880 - val_loss: 4.5126 - val_acc: 0.2700\n",
-      "Epoch 183/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 183/200\n",
       "500/500 [==============================] - 1s 2ms/step - loss: 0.1200 - acc: 0.9900 - val_loss: 4.5128 - val_acc: 0.2500\n",
       "Epoch 184/200\n",
       "500/500 [==============================] - 1s 2ms/step - loss: 0.1162 - acc: 0.9920 - val_loss: 4.5165 - val_acc: 0.2700\n",
