train final model

--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -5939,13 +5939,7 @@
       "['43840-8.txt', 'Poison Romance and Poison Mysteries', 'C. J. S. Thompson', 'September 28, 2013 ']\n",
       "['45518.txt', 'The Four Corners in Japan', 'Amy Ella Blanchard', 'April 28, 2014 ']\n",
       "['6576.txt', 'The Bobbsey Twins at Meadow Brook', 'Laura Lee Hope', 'September, 2004']\n",
-      "['6210.txt', 'The Trail of the Sword, Complete', 'Gilbert Parker', 'May 4, 2009 ']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['6210.txt', 'The Trail of the Sword, Complete', 'Gilbert Parker', 'May 4, 2009 ']\n",
       "['43497-8.txt', 'Trans-Himalaya, Vol. 1 (of 2)', 'Sven Hedin', 'August 18, 2013 ']\n",
       "['43046-8.txt', 'Planet of Dread', 'Murray Leinster', 'June 27, 2013 ']\n",
       "['3368.txt', 'A Hazard of New Fortunes, Part Third', 'William Dean Howells', 'October 23, 2004 ']\n",
@@ -18461,7 +18455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
